[package]
name = "s-expr"
version = "0.1.1"
edition = "2021"
authors = ["Vincent Hanquez <vincent@typed.io>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/vincenthz/s-expr"
repository = "https://github.com/vincenthz/s-expr"
description = "lightweight customizable s-expression parser and printer"
keywords = ["s-expr", "sexpr", "sexpression",]
categories = [ "parsing", "encoding" ]

[dependencies]
unicode-xid = { version = "0.2", optional = true }

[features]
default = [ "unicode" ]
unicode = [ "unicode-xid" ]
